Remove hint css to prevent overflows

--- a/resources/assets/css/components/navigation.css
+++ b/resources/assets/css/components/navigation.css
@@ -1,15 +1,4 @@
 
-
-.navigation {
-
-    .hint--bottom:after {
-        width: 180px;
-        white-space: normal;
-        text-align: center;
-    }
-
-}
-
 .navigation__item {
 
     display: block;
